# chrono.city

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  plan.md  tsconfig.json  vercel.json  vite.config.ts
docs/: AGENTS.md  AGENT_INSTRUCTIONS.md  ARCHITECTURE.md  CODE_PATTERNS.md  CONTRIBUTING.md  DATA_STRATEGY.md  METRICS.md  METRICS_FRAMEWORK.md  OVERTURE_DATA_REFERENCE.md  ROADMAP.md  TECH_DECISIONS.md  UX_DESIGN.md
docs/archive/: URBAN_EXPLORER_REFERENCE.md
notebooks/: ch0_eda.py  ch1_urban_fabric.py  ch2_land_use.py  ch3_amenities.py  ch4_street_network.py  ch5_composite_scores.py  ch6_isochrones.py  pyproject.toml
notebooks/utils/: overture.py
public/preload/: london.json
scripts/: extract-london.sh
src/: main.tsx
src/app/: App.tsx
src/config/: charts.ts  constants.ts  metrics.ts  narratives.ts  sections.ts  walkability.ts
src/data/: index.ts  preload.ts
src/data/cache/: bbox-quantize.ts  index.ts  indexeddb.ts  memory.ts
src/data/duckdb/: init.ts
src/data/hooks/: useChronoScore.ts  useDuckDBReady.ts  useKonturCell.ts  useKonturSectionData.ts  useSectionData.ts
src/data/kontur/: bridge.ts  scoring-adapter.ts
src/data/scoring/: duckdb-bridge.ts  index.ts  normalize.ts  section-bridge.ts  types.ts
src/features/charts/: index.ts  types.ts
src/features/geocoder/: index.ts
src/features/isochrone/: index.ts  types.ts
src/scoring/: chrono-score.ts  index.ts  normalize.ts  pipeline.ts  types.ts  utils.ts
src/state/: cache-store.ts  index.ts  map-store.ts  section-store.ts
src/styles/: index.css
(+74 files in other folders)
